--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=ParcialDs
 
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-;
+spring.datasource.url=jdbc:h2:mem:testdb;
+# jdbc:h2:mem:testdb
+#jdbc:h2:tcp://localhost/~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
